fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -30,8 +30,7 @@ body {
 }
 
 #root {
-  height: 100vh;
-  overflow: hidden;
+  min-height: 100vh;
 }
 
 h1 {
